@@ -20,6 +20,8 @@
  * Fixed [input type='id'] when used on new records.
  * Fixed bugs in [edit] forms and Ajax [add].
  * Fixed bugs in [edit] when used with a table.
+ * Fixed initial migration bug when using MySQL.
+ * Fixed loading on shared hosts without rmagick (or with an old version).
 
 == 1.0.0 2011-06-15
 
